# sarkinkofa

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  pyproject.toml
demo/: demo_fs.py  demo_stream.py
demo/demo-cam/: demo_cam.py
demo/demo-cam/store/: _store.xlsx
demo/demo-db/: _db.sqlite3  demo_db.py
demo/demo-db/inc/: 10_number.txt
demo/demo-fs/: _demo.db  demo.py  demo_fs.py
demo/demo-fs/output/: vehicle1.json  vehicle2.json  vehicle3.json  vehicle4.json  vehicle5.json
demo/demo-stream/: demo.py  demo_stream.py
notebook/: 01_train_sarki_anpd.ipynb  02_train_sarki_anpr.ipynb  03_test_sarki_kofa.ipynb  SarkiANPD_Train.ipynb  SarkiANPR_Train.ipynb
project/: .gitignore  README.md  pyproject.toml
project/sarkinkofa/: __init__.py  constants.py  tools.py  types.py
project/src/demo/: db.template.xlsx  demo_cam.py
project/src/demo/output/: 20231004_133430.json
project/src/notebook/: 01_train_anpd_yolov8.ipynb  02_train_anpr_yolov8.ipynb
sarkinkofa/: __init__.py  __main__.py  constants.py  demo.py  sarkinkofa_fs.py  tools.py  types.py  utils.py
sarkinkofa/resources/models/: anpd.names  anprv8.names
src/demo/: demo_cam.py  demo_fs.py
src/notebook/: 03_assemble_anpr_detection.ipynb
