[tool.poetry]
name = "sarkin-kofa"
version = "0.1.0"
description = ""
authors = ["Abdulazeez Jimoh <abdulazeezojimoh@gmail.com>"]
readme = "README.md"
packages = [{include = "sarkinkofa"}]
include = ["sarkinkofa/resources/**"]


[tool.poetry.scripts]
sarkinkofa-fs = "sarkinkofa.sarkinkofa_fs:app"


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
ultralytics = "^8.0.148"
opencv-python = "^4.8.0.74"
pillow = "9.5.0"
numpy = "^1.26.1"
typer = {extras = ["all"], version = "^0.9.0"}


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
pytest = "^7.4.2"
flake8 = "^6.1.0"
ipykernel = "^6.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
